Added /processes put endpoint
